# PerfCounter

./: CMakeLists.txt  Config.cmake.in  MyProjectConfig.cmake.in  perf.h  perfCounter.cpp  perfCounter.h  perfCounters.cpp  perfCounters.h
cmake/: perfcountersConfig.cmake.in
include/perfcounters/: perfCounter_LAPI.hpp  perfCounters_HAPI.hpp
src/: CMakeLists.txt  gemm.cpp  main.cpp  perf.cpp  perfCounter_LAPI.cpp  perfCounters_HAPI.cpp
src/algebra/: CMakeLists.txt  algebra.h
src/gnuplot/: cycles.gn  instructions.gn  ipc.gn  ipc.py
